--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -9,7 +9,6 @@ license = "UNLICENSED"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.111.0"
-alembic = "^1.13.1"
 psycopg2-binary = "^2.9.9"
 httpx = "^0.27.0"
 pydantic = {extras = ["email"], version = "^2.7.4"}
@@ -17,7 +16,7 @@ pydantic-settings = "^2.3.2"
 asyncpg = "^0.29.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sentry-sdk = "^2.5.1"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
+fastapi-mcp = "^0.3.6"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
