--- a/nextjs/.gitignore
+++ b/nextjs/.gitignore
@@ -3,7 +3,12 @@
 # dependencies
 node_modules
 .pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 coverage
@@ -11,6 +16,8 @@ coverage
 # next.js
 .next/
 out/
+
+# production
 build
 
 # misc
@@ -23,16 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# env files (can opt-in for committing if needed)
+.env*
 
-# turbo
-.turbo
-
-.contentlayer
-.env
+# vercel
 .vercel
-.vscode
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
