--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -1,1 +1,5 @@
+DEBUG=true
+OPENAI_API_KEY=
+
 NEXT_PUBLIC_COPILOTKIT_RUNTIME_URL=/api/copilotkit
+NEXT_PUBLIC_MCP_ENDPOINT=http://localhost:3001/mcp
