--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "uvicorn",
-      "args": ["src.main:app", "--reload"],
+      "args": ["src.main:app", "--reload", "--port", "3002"],
       "cwd": "${workspaceFolder}/fastapi",
       "jinja": true
     }
